results/SpecGenBench/conversational/log-NumberOfCutsSeq-2023_11_28_23_47_32.txt
class NumberOfCutsSeq {
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
    //@ ensures \result == n <==> n % 2 != 0 && n != 1;
    public int numberOfCuts(int n) {
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:3:) in method numberOfCuts
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
        ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:6:
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
        ^
2 verification failures

class NumberOfCutsSeq {
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
    //@ ensures \result == n <==> n % 2 != 0 && n != 1;
    public int numberOfCuts(int n) {
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:6: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:3:) in method numberOfCuts
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
        ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:3: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:6:
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
        ^
2 verification failures

class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
    //@ ensures \result == n <==> n % 2 != 0 && n != 1;
    public int numberOfCuts(int n) {
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:7: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4:) in method numberOfCuts
        return ((n == 1) ? 0 : ((n % 2 == 0) ? (n / 2) : n));
        ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:7:
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
        ^
2 verification failures

class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
    //@ ensures \result == n <==> n % 2 != 0 && n != 1;
    public int numberOfCuts(int n) {
        if (n == 1) {
            return 0;
        } else if (n % 2 == 0) {
            return n / 2;
        } else {
            return n;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4:) in method numberOfCuts
            return 0;
            ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8:
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
        ^
2 verification failures

class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
    //@ ensures \result == n <==> n % 2 != 0 && n != 1;
    public int numberOfCuts(int n) {
        if (n == 1) {
            return 0;
        } else if (n % 2 == 0) {
            return n / 2;
        } else {
            return n;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4:) in method numberOfCuts
            return 0;
            ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8:
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
        ^
2 verification failures

class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
    //@ ensures \result == n <==> n % 2 != 0 && n != 1;
    public int numberOfCuts(int n) {
        if (n == 1) {
            return 0;
        } else if (n % 2 == 0) {
            return n / 2;
        } else {
            return n;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4:) in method numberOfCuts
            return 0;
            ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8:
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
        ^
2 verification failures

class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
    //@ ensures \result == n <==> n % 2 != 0 && n != 1;
    public int numberOfCuts(int n) {
        if (n == 1) {
            return 0;
        } else if (n % 2 == 0) {
            return n / 2;
        } else {
            return n;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4:) in method numberOfCuts
            return 0;
            ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8:
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
        ^
2 verification failures

class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
    //@ ensures \result == n <==> n % 2 != 0 && n != 1;
    public int numberOfCuts(int n) {
        if (n == 1) {
            return 0;
        } else if (n % 2 == 0) {
            return n / 2;
        } else {
            return n;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4:) in method numberOfCuts
            return 0;
            ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8:
    //@ ensures \result == n / 2 <==> n % 2 == 0 && n != 1;
        ^
2 verification failures

class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures \result == (n % 2 == 0) ? (n / 2) : n;
    public int numberOfCuts(int n) {
        if (n == 1) {
            return 0;
        } else {
            return (n % 2 == 0) ? (n / 2) : n;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4: error: incomparable types: int and boolean
    //@ ensures \result == (n % 2 == 0) ? (n / 2) : n;
                        ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:4: error: incompatible types: int cannot be converted to boolean
    //@ ensures \result == (n % 2 == 0) ? (n / 2) : n;
                                        ^
2 errors

class NumberOfCutsSeq {
    //@ requires n >= 1;
    //@ ensures \result == 0 <==> n == 1;
    //@ ensures (n % 2 == 0) ==> (\result == n / 2);
    //@ ensures (n % 2 != 0) ==> (\result == n);
    public int numberOfCuts(int n) {
        if (n == 1) {
            return 0;
        } else if (n % 2 == 0) {
            return n / 2;
        } else {
            return n;
        }
    }
}
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8: verify: The prover cannot establish an assertion (Postcondition: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:5:) in method numberOfCuts
            return 0;
            ^
/home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:5: verify: Associated declaration: /home/max/Documents/JMLGPT/tmp/NumberOfCutsSeq.java:8:
    //@ ensures (n % 2 != 0) ==> (\result == n);
        ^
2 verification failures

